# g19daemon

./: CMakeLists.txt
src/: g19daemon.cpp  g19daemon.hpp  g19pluginsettings.cpp  g19pluginsettings.hpp  plugininterface.hpp
src/plugins/clock/: clock.cpp  clock.hpp
src/plugins/pomodoro/: CMakeLists.txt  pomodoro.cpp  pomodoro.hpp  pomodoro.qrc
